--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,61 +8,59 @@
     <form-wizard (onStepChanged)="onStepChanged($event)">
       <wizard-step [title]="'Customers'" [isValid]="emailForm.form.valid" (onNext)="onStep1Next($event)">
         <h4>Add Customer</h4>
-        <!-- <p class="lead">Email is required to proceed to the next step.</p> -->
-        <form #emailForm="ngForm">
+        <form #emailForm="ngForm" (ngSubmit)="saveCustomer(customer)">
           <div class="form-group">
             <label for="exampleInputEmail1">Email</label>
             <input type="email" class="form-control" id="exampleInputEmail1" name="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"
-              [(ngModel)]="data.email" required>
+              [(ngModel)]="customer.email" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+           <button class="btn btn-primary btn-sm">Save</button>
           </div>
         </form>
         <h4>Customers</h4>
         <ul>  
           <li *ngFor="let customer of customers">
-            {{ customer.email }} 
+          <input type="checkbox" class="form-check-input" name="secret" [(ngModel)]="step3.showSecret"/>
+
+          {{ customer.email }} 
           </li>
         </ul>
       </wizard-step>
       <wizard-step [title]="'Campaign'" [showNext]="step2.showNext" [showPrev]="step2.showPrev" (onNext)="onStep2Next($event)">
-        <h4>Add Campaign</h4>
-        <p class="lead">You can also control when to show/hide navigation buttons.</p>
-        <form>
-          <div class="form-check">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input" name="showNext" [(ngModel)]="step2.showNext"/>
-              Show Next button
-            </label>
+        <h4>Add Campaign For Email ID's:</h4><br>
+        <form #campaignForm="ngForm" (ngSubmit)="saveCampaign(campaign)">
+          <div class="form-group">
+            <label for="campname">Name:</label>
+            <input type="text" class="form-control" id="campname" name="campname" placeholder="Enter name"
+              [(ngModel)]="campaign.name" required>
           </div>
-          <div class="form-check">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input" name="showPrev" [(ngModel)]="step2.showPrev"/>
-              Show Previous button
-            </label>
+          <div class="form-group">
+            <label for="campUrl">Campaign Url:</label>
+            <input type="text" class="form-control" id="campUrl" name="campUrl" placeholder="Enter url"
+              [(ngModel)]="campaign.campaignUrl" required>
           </div>
+          <button class="btn btn-primary btn-sm">Add Campaign</button>
         </form>
       </wizard-step>
       <wizard-step [title]="'Upload-Template'" (onNext)="onStep3Next($event)">
         <h1>Upload Template</h1>
-        <p class="lead">Check below if you want to access secret step</p>
-        <form>
-          <div class="form-check">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input" name="secret" [(ngModel)]="step3.showSecret"/>
-              I want to know the secret
-            </label>
-          </div>
-        </form>
-      </wizard-step>
-      <wizard-step [title]="'Step3.5'" [hidden]="!step3.showSecret">
-        <h1>Step3.5</h1>
-        <p class="lead">This is a secret place only special people can see this!!</p>
+        <div>
+         <input type="file" (change)="selectFile($event)">
+        </div>
       </wizard-step>
      <wizard-step [title]="'Send-Email'" (onComplete)="onComplete($event)">
         <div [ngSwitch]="isCompleted">
           <div *ngSwitchDefault>
             <h1>Send-Email</h1>
-            <p class="lead">This is the final step.</p>
+            <div class="row">
+             <div class="col-sm-5">
+
+             </div>
+             <div class="col-sm-2">
+               <button class="btn btn-success btn-lg" (click) = "sendmail()">Send Mail</button>
+             </div>
+           </div>
           </div>
           <div *ngSwitchCase="true">
             <h4>Thank you {{data.email}}! You have completed all the steps.</h4>
