--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <section class="demo">
     <h1>
-      Demo
+      Campaign
     </h1>
     <hr/>
     <div style="height: 350px;">
