lint error fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
            </div>
           </div>
           <div *ngSwitchCase="true">
-            <h4>Thank you {{data.email}}! You have completed all the steps.</h4>
+            <!-- <h4>Thank you {{data.email}}! You have completed all the steps.</h4> -->
           </div>
         </div>
       </wizard-step>
